rome2_results/results/tensorT/sycl.log
~/sycl_workspace/llvm/build/bin/clang++ -fsycl --gcc-toolchain=/home/ga27mex2/spack_rome2/spack/opt/spack/linux-sle_hpc15-zen2/gcc-14.2.0/gcc-14.2.0-5o6uafvyeefoza5cmnze5vcuwbdhzj6o/ -fsycl-targets=amdgcn-amd-amdhsa -Xsycl-target-backend --offload-arch=gfx908 -I/home/ga27mex2/sycl_workspace/llvm/build/lib/libsycl.so.8 -DUSE_GPU -DUSE_GPU -O3 -O3 -c main.cpp -o main.o
main.cpp:38:12: error: comparison between pointer and integer ('char **' and 'int')
   38 |   if (argc != 2) {
      |       ~~~~ ^  ~
main.cpp:39:40: error: subscripted value is not an array, pointer, or vector
   39 |     printf("Usage: %s <repeat>\n", argv[0]);
      |                                    ~~~~^~
main.cpp:42:21: error: subscripted value is not an array, pointer, or vector
   42 |   repeat = atoi(argv[1]);
      |                 ~~~~^~
3 errors generated.
make: *** [Makefile:71: main.o] Error 1
